<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/action_main_settings"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/action_main_settings"/>
        <item android:id="@+id/action_user_settings"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/action_user_settings"/>
    </group>

    <item android:title="@string/menu_user_action" >
        <menu>
            <item android:id="@+id/day_detail"
                android:icon="@android:drawable/ic_menu_slideshow"
                android:title="@string/action_day_detail"/>
            <item android:id="@+id/action_input"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/action_input" />
            <item android:id="@+id/action_statistic"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/action_statistic"/>
            <item android:id="@+id/action_common_statistic"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/action_common_statistic"/>
        </menu>
    </item>

</menu>