<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_main_settings" android:title="@string/action_main_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_user_settings" android:title="@string/action_user_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/day_detail" android:title="@string/action_day_detail"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_input" android:title="@string/action_input"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_statistic" android:title="@string/action_statistic"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_common_statistic" android:title="@string/action_common_statistic"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
