<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/inputDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/paramName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:textSize="20dp" >
    </TextView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonPrev"
            android:text="@string/previous_symbol"
            android:layout_width="40dp"
            android:layout_height="match_parent" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/markList"
            android:layout_width="wrap_content"
            android:scrollbars="vertical"
            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/buttonNext"
            android:text="@string/next_symbol"
            android:layout_width="40dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:text="@string/description"
        android:textSize="20dp" >
    </TextView>
    <EditText
        android:id="@+id/paramDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text"
        android:imeOptions="actionDone" />
</LinearLayout>