<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:columnCount="3"
    android:rowCount="5"
    android:orientation="horizontal"
    >

    <ImageView
        android:layout_gravity="fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherImage"
        android:layout_row="0"
        android:layout_rowSpan="4"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pressure"
        android:id="@+id/pressureLabel"
        android:layout_row="0" />
    <TextView
        android:layout_column="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="1"
        android:width="@dimen/field_value_width"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_row="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temperature"
        android:id="@+id/temperatureLabel"
        android:layout_row="1"
        android:layout_column="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="2"
        android:width="@dimen/field_value_width"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:id="@+id/temperatureValue"
        android:layout_row="1"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/weather"
        android:id="@+id/weatherLabel"
        android:layout_row="2"
        android:layout_column="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="3"
        android:width="@dimen/field_value_width"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:id="@+id/weatherValue"
        android:layout_row="2"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/moon_day"
        android:id="@+id/moonDayLabel"
        android:layout_row="3"
        android:layout_column="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="4"
        android:width="@dimen/field_value_width"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:id="@+id/moonDayValue"
        android:layout_row="3"
        android:layout_column="2" />
</GridLayout>
